# pdx

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  (+1 more)
sdk/: pyproject.toml
sdk/examples/: simple_trade.py
sdk/pdx_sdk/: compute.py  config.py  contracts.py  evidence.py  signing.py  types.py
trumptrade/: README.md  RUNBOOK.md  pyproject.toml
trumptrade/config/: markets-offline.yaml  markets.yaml  risk_limits.yaml  sources-offline.yaml  sources.yaml  trump_policy_playbook.yaml
trumptrade/data/: decisions.jsonl  orders.jsonl  positions.jsonl  report.json  signals.jsonl
trumptrade/data/sample_posts/: posts.json
trumptrade/examples/: run_mock_demo.py
trumptrade/scripts/: research_analysis.py
trumptrade/tests/: test_agents.py  test_arb.py  test_arb_agent.py  test_backtest.py  test_basket.py  test_classifier_prompt.py  test_close_executor.py  test_decision_store.py  test_fake_classifier.py  test_market_registry.py  test_market_signal.py  test_mock_market.py  test_monitor.py  test_orders.py  test_pipeline_e2e.py  test_pipelines.py  test_pmxt_adapter.py  test_position_sizer.py  test_predict_fun.py  test_predict_fun_executor.py  test_registry.py  test_reports.py  test_risk.py  test_signal_sources_extra.py  test_venue_clients.py  test_walkback.py
trumptrade/trumptrade/: __init__.py  cli.py  config.py  pipeline.py  types.py
trumptrade/trumptrade/agents/: __init__.py  arb_agent.py  base.py  exit_agent.py  policy_agent.py
trumptrade/trumptrade/arb/: __init__.py  detector.py  matcher.py  scanner.py
trumptrade/trumptrade/backtest/: __init__.py  harness.py  prices.py
trumptrade/trumptrade/classifier/: __init__.py  fake_classifier.py  policy_classifier.py
trumptrade/trumptrade/dashboard/: app.py
trumptrade/trumptrade/decisions/: __init__.py
(+269 files in other folders)
